# Ether

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  heroku.yml  main.py  pyproject.toml  render.yaml  requirements.txt  web_service.py
config/: config.py
core/: bot.py
plugins/: alive.py  dm.py  dm_shield.py  fonts.py  help.py  privacy.py  shortcut.py  tagall.py
services/: dm_service.py
storage/: mongo.py
